--- a/.github/workflows/wa-google-cloudrun-docker.yml
+++ b/.github/workflows/wa-google-cloudrun-docker.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: wagcp_deploy
     env:
-      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/webacademy:latest
+      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/lab4:latest
     steps:
       # Git checkout
       - name: Checkout
