fiz alteracoes no deploy

--- a/.github/workflows/wa-google-cloudrun-docker.yml
+++ b/.github/workflows/wa-google-cloudrun-docker.yml
@@ -37,36 +37,41 @@ jobs:
           dockerfile: ./Dockerfile   # Specify the path to your Dockerfile here
           tags: juanoliveira0101/lab4:latest
   deploy:
-    needs: lint
-    name: Setup Gcloud Account
-    runs-on: ubuntu-latest
-    environment: wagcp_deploy
-    env:
-      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/lab4:latest
-    steps:
-      # Git checkout
-      - name: Checkout
-        uses: actions/checkout@v3
+  needs: lint
+  name: Setup Gcloud Account
+  runs-on: ubuntu-latest
+  environment: wagcp_deploy
+  env:
+    IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/lab4:latest
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      # Login to GCP
-      - name: LoginCCP
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
-      # gcloud configure docker
-      - name: Configure Docker
-        run: gcloud auth configure-docker --quiet
+    - name: Set up gcloud CLI
+      uses: google-github-actions/setup-gcloud@v1
 
-      # build image
-      - name: Build Docker image
-        run: docker build -t $IMAGE_NAME .
+    - name: Configure Docker
+      run: gcloud auth configure-docker --quiet
 
-      # push image to registry
-      - name: Push Docker image
-        run: docker push $IMAGE_NAME
+    - name: Build Docker image
+      run: docker build -t $IMAGE_NAME .
 
-      # deploy image
-      - name: Deploy Docker image
-        run: gcloud run deploy wacicd --image $IMAGE_NAME --region us-west1 --memory 128Mi --min-instances 0 --max-instances 1 --platform managed --port 8080 --allow-unauthenticated
+    - name: Push Docker image
+      run: docker push $IMAGE_NAME
+
+    - name: Deploy Docker image
+      run: |
+        gcloud run deploy wacicd \
+          --image $IMAGE_NAME \
+          --region us-west1 \
+          --memory 128Mi \
+          --min-instances 0 \
+          --max-instances 1 \
+          --platform managed \
+          --port 8080 \
+          --allow-unauthenticated
